--- a/src/academia/index.jade
+++ b/src/academia/index.jade
@@ -11,9 +11,10 @@ block content
         img(src="/images/academia/hero.jpg")
       .academia__hero__container
         .academia__hero__wrapper
-          h2.academia__hero__title academia internacional de pesca con mosca aguas arriba latinoamérica
+          h3.academia__hero__title academia internacional de pesca con mosca aguas arriba latinoamérica
           .academia__hero__video
             iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+ 
     section.academia__about
       .academia__about__paises
         img(src="/images/academia/line.png")
@@ -25,6 +26,7 @@ block content
                   p.academia__about__text Pablo Rodrigo Pérez junto a nuestro equipo viajará personalmente hasta tu país para brindar la Clínica Integral de Pesca con Mosca, llevaremos a los pescadores desde el nivel cero hasta lograr su primer pez.
       .academia__about__image
           img(src="/images/academia/middle.png")
+ 
     section.academia__interstitial
       .container
         p.academia__interstitial__text
@@ -33,26 +35,131 @@ block content
         .academia__interstitial__container
           .academia__interstitial__wrapper
             .academia__interstitial__flag
-              img(src="/images/academia/peru.jpg")
+              img(src="/images/academia/peru.png")
             p.academia__interstitial__name Rodolfo leon
             p.academia__interstitial__email flyfishingperu@outlook.com 
           .academia__interstitial__wrapper
             .academia__interstitial__flag
-              img(src="/images/academia/peru.jpg")
-            p.academia__interstitial__name Rodolfo leon
-            p.academia__interstitial__email flyfishingperu@outlook.com 
+              img(src="/images/academia/panama.png")
+            p.academia__interstitial__name Riccardo Pessina
+            p.academia__interstitial__email flyfishing507@gmail.com 
           .academia__interstitial__wrapper
             .academia__interstitial__flag
-              img(src="/images/academia/peru.jpg")
-            p.academia__interstitial__name Rodolfo leon
-            p.academia__interstitial__email flyfishingperu@outlook.com 
+              img(src="/images/academia/ecuador.png")
+            p.academia__interstitial__name javier guevara
+            p.academia__interstitial__email www.ecuadorflyfishingtours.com 
           .academia__interstitial__wrapper
             .academia__interstitial__flag
-              img(src="/images/academia/peru.jpg")
-            p.academia__interstitial__name Rodolfo leon
-            p.academia__interstitial__email flyfishingperu@outlook.com 
+              img(src="/images/academia/colombia.png")
+            p.academia__interstitial__name alejo diaz
+            p.academia__interstitial__email www.tucunarelodge.com 
           .academia__interstitial__wrapper
             .academia__interstitial__flag
-              img(src="/images/academia/peru.jpg")
-            p.academia__interstitial__name Rodolfo leon
-            p.academia__interstitial__email flyfishingperu@outlook.com 
+              img(src="/images/academia/mexico.png")
+            p.academia__interstitial__name Juan antonio perez y yaisa corrales
+            p.academia__interstitial__email www.dondepescar.com
+    
+    section.academia__clinicas
+      .container
+        .row
+          .col-xs-24.col-md-12.academia__clinicas__col-left
+            h2.academia__clinicas__title
+              span clínica principiantes 
+              |de 2 días
+            .academia__clinicas__wrapper
+              .academia__clinicas__day
+                h3.academia__clinicas__day-title día 1
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 8.30 HS
+                  p.academia__clinicas__text Acreditaciones
+                  p.academia__clinicas__text Introducción a la pesca con mosca, charla con imágenes de 40 minutos + 20' preguntas interactivas.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 10.00 HS
+                  p.academia__clinicas__text En césped o lagunas trabajaremos los siguientes temas:
+                  p.academia__clinicas__text Armados y configuración de equipos.
+                  p.academia__clinicas__text Técnicas de flly casting, empuñadura, postura, golpe de lance, arco, construcción de loop.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 13.30 HS
+                  p.academia__clinicas__text Break - Almuerzo light.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 14.30 HS
+                  p.academia__clinicas__text Levante y tendido en pista de entrenamiento con objetivos, levante y tendido con proyección de línea.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 17.30 HS
+                  p.academia__clinicas__text Nudos básicos de la pesca con mosca
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 18.30 HS
+                  p.academia__clinicas__text Finalización de la primera jornada
+              .academia__clinicas__day
+                h3.academia__clinicas__day-title 
+                  |día 2: 
+                  span Salida de pesca con mosca
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 9.00 HS
+                  p.academia__clinicas__text Compartiremos una salida de día entero a un lugar próximo a pescar juntos, compartiendo tpecnicas específicas de lanzamiento, presentación, derivas, lectura de aguas, y elleciones de las moscas, pelea no estresante, técnicas de manipulación, fotografía y devolución.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 18.30 HS
+                  p.academia__clinicas__text Entrega de certificados.
+                  p.academia__clinicas__text Finalización de la Academia.
+            p.academia__clinicas__price Valor de la clínica de dos jornadas para un grupo de 12 principiantes por persona USD 250.-
+          .col-xs-24.col-md-12.academia__clinicas__col-right
+            h2.academia__clinicas__title
+              span clínica nivel avanzado 
+              |de 2 días
+            .academia__clinicas__wrapper.-light
+              .academia__clinicas__day.-light
+                h3.academia__clinicas__day-title día 1
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 9.00 HS
+                  p.academia__clinicas__text En césped trabajaremos los siguientes temas:
+                  p.academia__clinicas__text Técnicas de fly casting avanzado, empuñadura, postura, golpe de lance, arco de lanzamiento, construcción y principios de loop, eje y planos según el ataque del viento.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 13.30 HS
+                  p.academia__clinicas__text Break - Almuerzo light.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 14.30 HS
+                  p.academia__clinicas__text Trabajaremos en pista de entrenamiento levante y tendido con proyección de línea hacia blancos específicos logrando loops cerrados en cortas, medianas y largas distancias, Precisión al blanco / Presentación y finalmente distancia.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 18.30 HS
+                  p.academia__clinicas__text Finalización de la primera jornada
+              .academia__clinicas__day.-light
+                h3.academia__clinicas__day-title 
+                  |día 2: 
+                  span Salida de pesca con mosca
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 9.00 HS
+                  p.academia__clinicas__text Compartiremos una salida de día entero a un lugar próximo a pescar juntos, compartiendo tpecnicas específicas de lanzamiento, presentación, derivas, lectura de aguas, y elleciones de las moscas, pelea no estresante, técnicas de manipulación, fotografía y devolución. Estos son temas propuestos por la academia pero en el caso de nivel avanzado podemos acordar los temas a ver en terreno.
+                .academia__clinicas__group
+                  span.academia__clinicas__hora 18.30 HS
+                  p.academia__clinicas__text Entrega de certificados.
+                  p.academia__clinicas__text Finalización de la Academia.
+            p.academia__clinicas__price Valor de la clínica de dos jornadas para un grupo de 12 principiantes por persona USD 350.-
+      .academia__clinicas__interstitial
+        p.academia__clinicas__interstitial-text clínicas para 12 alumnos, los cupos serán informados en cada destino según capacidad
+        p.academia__clinicas__interstitial-text.-light Whatsapp de contacto Pablo Rodrigo Pérez 
+          span +5492615335001
+
+    section.academia__owner
+      .container
+        .row
+          .col-xs-24.col-md-12
+            h2.academia__owner__title
+              |acerca de
+              br
+              span pablo rodrigo pérez
+            p.academia__owner__text.-dark 46 Años, Argentino. Guía de Trekking y Alta Montaña, egresado en 1995 de la EPGTANM.
+            p.academia__owner__text Hijo de Benito Pérez pionero pescador argentino comenzando por el año 1966, entomólogo y escritor de cuatro libros sobre entomología aplicada a la pesca con mosca, fundador de la Escuela de Pesca con Mosca Benito Pérez y de Mendoza Fly Shop.
+            .academia__owner__image
+              img(src="/images/academia/bottom-left.jpg")
+          .col-xs-24.col-md-10.col-md-offset-1
+            .academia__owner__image.-shadow
+              img(src="/images/academia/bottom-right.jpg")
+            p.academia__owner__text Pablo con gran pasión he recorrido cuanto ricón haya alguna especie que pueda ser pescada con mosca, como también en estos lugares remotos organiza clínicas especiales transmitiendo sus conocimientos, ha visitado pescando o por clínicas diferentes lugares de Argentina, Chile, Ecuador, México, Cuba, China y Estados Unidos, abordando truchas, sea trout, tarpon, jack, permit, snook, bonefish, carpas, dorados y otras especies.
+            p.academia__owner__text Desde temprana edad recibió lecciones de pesca con mosca, entre sus maestros podemos destacas a: Benito Péres (Argentina), Allan Fraser (Escocia), Darío Pedemonte (Arg.), Mel Krieger (USA), Hans Hebeisen (Europa), Gary Borger (USA), Tim Rajeff (USA).
+
+
+
+
+
+
+
