--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -1,4 +1,4 @@
-header.header.-on-top
+header.header.-ontop
   .container
     .header__wrapper
       a.header__logo(href="/")
@@ -7,16 +7,16 @@ header.header.-on-top
         nav.header__nav    
           ul.header__list
             li
-              a home
+              a(href="/") home
             li
-              a programas
+              a(href="/programas") programas
             li
-              a shop
+              a(href="/tienda") shop
           ul.header__list
             li
-              a aguas arriba club
+              a(href="/club") aguas arriba club
             li
-              a contacto
+              a(href="#contacto") contacto
       .header__hamburguer
         span
         span
