--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,7 @@ block content
             .home__hero__container
                 .home__hero__wrapper
                     .home__hero__video
-                        iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        iframe(src="http://www.espn.com.ar/core/video/iframe?id=4971305&amp;endcard=false" frameborder="0" allowfullscreen)
                     a.home__hero__chapters-button(href="/programas")
                         span
                         p 
@@ -46,7 +46,7 @@ block content
                                         |nuestro
                                         br
                                         span shop
-                                    a.home__shop__button(href="/shop") ver productos
+                                    a.home__shop__button(href="/tienda") ver productos
                             .col-xs-24.col-md-18.home__shop__column
                                 .home__shop__image
                                     img(src="/images/home/cta-shop.png")
