--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -10,8 +10,8 @@ doctype html
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title PROYECT TITLE
-    meta(name='description', content= 'A new Yeogurt application')
+    title Aguas Arriba ESPN | Flyfishing TV Show
+    meta(name='description', content= 'Aguas Arriba ESPN, el programa de pesca con mosca de ESPN emitido a toda Latinoamérica. Powered by @fishsimply &amp; @mendozaflyshop')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block meta
     block stylesheets
