--- a/src/_modules/header/header.scss
+++ b/src/_modules/header/header.scss
@@ -2,12 +2,16 @@
 
     $h: &;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     padding: 20px 0;
+    z-index: 10000;
+    background: transparentize($blue, .3);
     
     @include mq(md) {
+        background: none;
+        position: absolute;
     }
     
     &__wrapper {
@@ -23,6 +27,7 @@
     &__container {
         display: flex;
         align-items: center;
+        justify-content: space-around;
         
         @include mq(md) {
             height: 150px;
@@ -31,8 +36,10 @@
     }
     
     &__logo {
+        @include trans;
+
         z-index: 20;
-        width: 40%;
+        width: 20%;
 
         @include mq(md) {
             height: 150px;
@@ -40,7 +47,6 @@
             left: 50%;
             transform: translateX(-50%);
             width: auto;
-
         }
         
         img {
@@ -79,7 +85,7 @@
             height: auto;
             position: static;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             background: transparent;
         }
@@ -87,32 +93,46 @@
 
     &__list {
         padding-left: 50px;
+        
         @include mq(md) {
             display: flex;
             align-items: center;
+            padding-left: 0;
+        }
+
+        &:last-child {
+            li:last-child {
+                margin-bottom: 0;
+            }
         }
 
         li {
-            &:not(:last-child) {
-                margin-bottom: 20px;
-                
+            margin-bottom: 20px;
+            @include mq(md) {
+                margin-bottom: 0;
+            }
+            &:not(:last-child) {                
                 @include mq(md) {
-                    margin-bottom: 0;
                     margin-right: 40px;
                 }
             }
         }
 
+
         a {
             text-transform: uppercase;
             font-weight: 300;
-            color: $black;
+            color: $blue;
             font-size: 26px;
             
             @include mq(md) {
-                font-size: 20px;
+                font-size: 14px;
                 color: $white;
                 font-weight: 600;
+            }
+
+            &:hover {
+                color: $white;
             }
         }
     }
@@ -155,7 +175,7 @@
     &.-open {
         #{$h}__hamburguer {
             span {
-                background-color: $black;
+                background-color: $blue;
             }
 
             span:nth-child(1) {
@@ -173,6 +193,23 @@
             transform: translateX(0);
             opacity: 1;
             overflow: visible;
+        }
+
+        #{$h}__logo {
+            z-index: 2000;
+            filter: brightness(50%) hue-rotate(250deg);
+        }
+    }
+
+    &.-ontop {
+        background: transparent;
+
+        #{$h}__logo {
+            width: 40%;
+
+            @include mq(md) {
+                width: auto;
+            }
         }
     }
 }
