--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -1,5 +1,5 @@
 footer.footer
-  form.footer__form._form
+  form.footer__form._form#form
     .container
       .row
         .col-xs-24
@@ -33,7 +33,7 @@ footer.footer
   .footer__social
     .container
       .footer__wrapper
-        p.footer__dante
+        a.footer__dante(href="http://www.danteinteractive.com" target="_blank")
           |Web Site made by 
           span dante interactive
         p.footer__copyright 2019 &copy; Aguas Arriba - Todos los derechos reservados.
