--- a/src/academia/index.jade
+++ b/src/academia/index.jade
@@ -140,6 +140,8 @@ block content
           span +5492615335001
 
     section.academia__owner
+      .academia__owner__logo
+        img(src="/images/emblem.png")
       .container
         .row
           .col-xs-24.col-md-12
