--- a/src/index.jade
+++ b/src/index.jade
@@ -16,6 +16,8 @@ block content
                             br
                             |anteriores
         section.home__about
+            .home__about__logo
+                img(src="/images/emblem.png")
             .container.home__about__container
                 .row
                     .col-xs-24.col-md-10
