--- a/src/programas/index.jade
+++ b/src/programas/index.jade
@@ -87,7 +87,7 @@ block content
     section.programas__cta
       .programas__cta__wrapper
         p.programas__cta__text Se emite a través de ESPN para Latino América. Desde México a Argentina y Chile y a todos los países de habla hispana por ESPN HD, ESPN2, ESPN + y ESPNplay.com y tambiém Online en nuestra web.
-        a.programas__cta__button(href="#")
+        a.programas__cta__button(href="http://espndeportes.espn.com/search/results?q=patagonic#gsc.tab=0&gsc.q=patagonic%20waters" target="_blank")
           |consulta la programación
           br
           |de tu ciudad en @espn
