--- a/src/_styles/pages/programas.scss
+++ b/src/_styles/pages/programas.scss
@@ -209,6 +209,10 @@
     position: relative;
     padding-top: 40px;
 
+    @include mq(md) {
+      padding-top: 0;
+    }
+
     &__container {
       @include mq(md) {
         position: absolute;
